updated layout and fixed the layout bugs to properly style the interface

--- a/app/admin/globals.css
+++ b/app/admin/globals.css
@@ -60,7 +60,7 @@
     @apply font-sans;
   } */
   * {
-    /* @apply border-border; */
+    @apply border-border;
   }
   body {
     /* @apply bg-background text-foreground; */
